AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/ssot__AccountContact__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>An individual who has a role specific to an Account.</description>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Account Contact</labelOverride>
        <masterLabel>Account Contact</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
        <referenceEntityGroup>Account</referenceEntityGroup>
        <referenceEntityName>AccountContact</referenceEntityName>
        <referenceEntitySubjectArea>Account</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>