AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/Account_PIN__c.field-meta.xml
<CustomField>
    <fullName>Account_PIN__c</fullName>
    <label>Account PIN</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Account PIN</labelOverride>
        <masterLabel>Account PIN</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>