AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__AccountContactRoles__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountContactRoles__c</fullName>
    <label>AccountContactRoles relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>AccountContactRoles relationship</masterLabel>
        <refAttrDeveloperName>AccountContactRoles</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>