AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__AssistantName__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssistantName__c</fullName>
    <label>Assistant Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Assistant Name</masterLabel>
        <refAttrDeveloperName>AssistantName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>