AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__AssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssistantPhone__c</fullName>
    <label>Assistant Phone</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Assistant Phone</masterLabel>
        <refAttrDeveloperName>AssistantPhone</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>