AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__BusinessPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessPhoneId__c</fullName>
    <label>Business Phone</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Business Phone</masterLabel>
        <refAttrDeveloperName>BusinessPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>