AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__ContactEmailId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactEmailId__c</fullName>
    <label>Contact Email</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Contact Email</masterLabel>
        <refAttrDeveloperName>ContactEmailId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>