AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__ContactNote__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactNote__c</fullName>
    <label>Contact Note</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Contact Note</masterLabel>
        <refAttrDeveloperName>ContactNote</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>