AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__DeceasedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeceasedDateTime__c</fullName>
    <label>Deceased Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Deceased Date</masterLabel>
        <refAttrDeveloperName>DeceasedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>