AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__FaxPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FaxPhoneId__c</fullName>
    <label>Fax Phone</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Fax Phone</masterLabel>
        <refAttrDeveloperName>FaxPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>