AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__HomePhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HomePhoneId__c</fullName>
    <label>Home Phone</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Home Phone</masterLabel>
        <refAttrDeveloperName>HomePhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>