AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__IndirectRelationAccountContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndirectRelationAccountContactId__c</fullName>
    <label>Indirect Relation Account Contact</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Indirect Relation Account Contact</masterLabel>
        <refAttrDeveloperName>IndirectRelationAccountContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>