AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__MailingAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MailingAddressId__c</fullName>
    <label>Mailing Address</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Mailing Address</masterLabel>
        <refAttrDeveloperName>MailingAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>