AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Marital Status</masterLabel>
        <refAttrDeveloperName>MaritalStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>