AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__MobilePhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MobilePhoneId__c</fullName>
    <label>Mobile Phone</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Mobile Phone</masterLabel>
        <refAttrDeveloperName>MobilePhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>