AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__OtherContactAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OtherContactAddressId__c</fullName>
    <label>Other Contact Address</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Other Contact Address</masterLabel>
        <refAttrDeveloperName>OtherContactAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>