AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__ReportsToAccountContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReportsToAccountContactId__c</fullName>
    <label>Reports To Account Contact</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Reports To Account Contact</masterLabel>
        <refAttrDeveloperName>ReportsToAccountContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>