AmpShare SF Codebase/force-app/main/default/objects/ssot__AccountContact__dlm/fields/ssot__SequenceInMultipleBirthNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SequenceInMultipleBirthNumber__c</fullName>
    <label>Sequence In Multiple Birth</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Sequence In Multiple Birth</masterLabel>
        <refAttrDeveloperName>SequenceInMultipleBirthNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>